Docker/k8s/kind/examples/initcontainers/nginx-busybox-initcontainer-https.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: initcontainer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: initcontainer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-ip
  template:
    metadata:
      labels:
        app: nginx-ip
    spec:
      volumes:
      - name: web-content
        emptyDir: {}
      containers:
        - name: web-container
          image: nginx
          volumeMounts:
          - name: web-content
            mountPath: /usr/share/nginx/html
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-ip-service
  namespace: initcontainer
spec:
  type: LoadBalancer
  selector:
    app: nginx-ip
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ip-ingress
  namespace: initcontainer
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: host.docker.internal
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /initcontainer($|/)?(.*)
        backend:
          service:
            name: nginx-ip-service
            port:
              number: 80
  tls:
  - hosts:
    - host.docker.internal
---
